--- a/home.css
+++ b/home.css
@@ -71,14 +71,14 @@ div.blankBullet {
   cursor: default;
   text-align: center;
   font-family: GeneralSans;
-  font-size: 1.5rem;
+  font-size: calc(0.8vh + 0.8vw);
   animation: riseLoad 1.5s ease 0s 1 normal backwards;
 }
 
 div.horizontalLayout {
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: min-content;
   column-gap: 20px;
 }
 
@@ -87,6 +87,16 @@ div.hidden {
   font-weight: bolder;
   opacity: 0;
   animation: none;
+}
+
+div.hiddenBox {
+  will-change: clip-path;
+  opacity: 0;
+}
+
+.hiddenBox.boxReveal {
+  background-color: white;
+  animation: boxReveal 1.2s ease-in-out normal forwards;
 }
 
 @keyframes riseLoad {
@@ -98,6 +108,26 @@ div.hidden {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes boxReveal {
+  0% {
+    clip-path: polygon(0 0, 10% 0, 10% 100%, 0 100%);
+  }
+
+  50% {
+    clip-path: polygon(95% 0, 100% 0, 100% 100%, 95% 100%);
+  }
+
+  80% {
+    clip-path: polygon(0 0, 5% 0, 5% 100%, 0 100%);
+    animation-timing-function: ease-out;
+  }
+
+  100% {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    animation-timing-function: ease-in;
   }
 }
 
@@ -129,30 +159,30 @@ div.hidden {
   animation-delay: 0.6s;
 }
 
-::-webkit-scrollbar {
-  width: 12px;
-  border-radius: 30px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: var(--scrollbarTrack);
-  border-radius: 30px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--scrollbarThumb);
-  border-radius: 30px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--buttonGithubHoverBG);
-  border-radius: 30px;
-}
-
 ::-moz-selection {
   background: var(--buttonGithubHoverBG);
 }
 
 ::selection {
   background: var(--buttonGithubHoverBG);
+}
+
+@media (max-width: 900px) {
+  div.mainTitle {
+    font-size: 2.5rem;
+  }
+
+  a.bullet,
+  div.blankBullet {
+    font-size: 1rem;
+  }
+
+  div.blurBox {
+    width: 100vw;
+    min-height: 100vh;
+    justify-content: center;
+    border-radius: 0;
+    overflow: hidden;
+  }
+
 }
