--- a/projects.css
+++ b/projects.css
@@ -1,6 +1,4 @@
 :root {
-  --scrollbarTrack: rgb(25, 27, 38);
-  --scrollbarThumb: #555;
   --buttonBG: rgb(49, 52, 74);
   --buttonHoverBG: #5e43f3ff;
   --buttonGithubBG: #333;
@@ -152,14 +150,15 @@ div.projectLayout {
   background-color: rgba(255, 255, 255, 0.01);
   backdrop-filter: blur(30px);
   align-items: center;
+  align-self: flex-start;
   border-radius: 40px;
+  box-sizing: border-box;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 div.projectContainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   gap: 20px;
   padding: 20px;
   width: 100%;
@@ -184,7 +183,7 @@ img.buttonIMG {
   background-color: var(--buttonBG);
   height: calc(1vw + 2vh);
   padding: 12px;
-  border-radius: 30px;
+  border-radius: 100%;
   transition: 0.3s;
   animation: riseLoad 1s ease 0s 1 normal backwards;
 }
@@ -268,30 +267,51 @@ a {
   animation-delay: 0.7s;
 }
 
-::-webkit-scrollbar {
-  width: 12px;
-  border-radius: 30px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: var(--scrollbarTrack);
-  border-radius: 30px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--scrollbarThumb);
-  border-radius: 30px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--buttonHoverBG);
-  border-radius: 30px;
-}
-
 ::-moz-selection {
   background: var(--buttonHoverBG);
 }
 
 ::selection {
   background: var(--buttonHoverBG);
+}
+
+@media (max-width: 900px) {
+
+  html,
+  body {
+    overflow-x: hidden;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+  }
+
+  body {
+    position: relative;
+  }
+
+  div.horizontalLayout {
+    flex-direction: column;
+    row-gap: 12px;
+  }
+
+  div.blurBox {
+    width: 100vw;
+    min-height: 100vh;
+    justify-content: flex-start;
+    border-radius: 0;
+    overflow: hidden;
+  }
+
+  div.projectLayout {
+    width: 90vw;
+  }
+
+  div.mainTitle {
+    font-size: 2rem;
+  }
+
+  img.buttonIMG {
+    height: 3rem;
+    border-radius: 100%;
+  }
 }
